Completing front end using jsp and thymeleaf

--- a/src/main/resources/ViewResolver.properties
+++ b/src/main/resources/ViewResolver.properties
@@ -1,5 +1,7 @@
 jsp.prefix=/WEB-INF/views/jsp/
 jsp.suffix=.jsp
+jsp.order=0
 
 thymeleaf.prefix=/WEB-INF/views/thymeleaf/
 thymeleaf.suffix=.html
+thymeleaf.order=1
